--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "name": "solifans",
+  "name": "sowyfans",
   "version": "0.1.0",
+  "author": {
+    "name": "Pudding"
+  },
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/crownss/sowyfans-frontend"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
