initial commit of sowyfans

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "sowyfans",
   "version": "0.1.0",
   "author": {
-    "name": "Pudding"
+    "name": "crownss",
+    "url": "https://github.com/crownss"
   },
   "repository": {
     "type": "github",
